update assigned students api
